FMD requests showing in MapsActivity cards